@@ -7,7 +7,12 @@ pipeline {
             environment name: 'ENV', value: 'ICORP'
         }    
             steps {
-                echo '$ENV'
+                SONAR_HOST_URL="https://sonarqube-be.balgroupit.com"
+SOURCES="src"
+BINARIES="target/classes" 
+        
+                deleteDir()
+                git branch: 'master', credentialsId: 'TFS', url:'http://svw-me-source01:9091/tfs/DefaultCollection/Baloise/_git/MDM'
             }
         }
 	stage('Build') {
@@ -15,7 +20,8 @@ pipeline {
             environment name: 'ENV', value: 'ICORP'
         } 
 	    steps {
-	        echo '$ENV'
+	        withMaven(jdk: 'jdk8', maven: 'maven_3_2_5_pipeline', mavenOpts: '-Xmx2048m -XX:MaxPermSize=512m') {
+                    sh 'mvn clean install'
             }
 	}
 	stage('Package') {
@@ -23,7 +29,7 @@ pipeline {
             environment name: 'ENV', value: 'ICORP'
         } 
 	    steps {
-	        echo '$ENV'
+	        build 'MDM_Package'
 	    }
 	}
 	stage('Sonar Analysis') {
@@ -31,15 +37,11 @@ pipeline {
             environment name: 'ENV', value: 'ICORP'
         } 
 	    steps {
-	        echo '$ENV'
-	    }
-	}
-	stage('Sonar Analysis') {
-	when{
-            environment name: 'ENV', value: 'ICORP'
-        } 
-	    steps {
-	        echo '$ENV'
+	        withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'SonarAdmin',usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
+                withMaven(jdk: 'jdk8', maven: 'maven_3_2_5_pipeline', mavenOpts: '-Xmx2048m -XX:MaxPermSize=512m') {
+                    //sh "mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.1.1:sonar -f atlas-cleva/pom.xml -Dsonar.exclusions=${SONAR_EXCLUSIONS} -Dsonar.host.url=${SONAR_HOST_URL} -Dsonar.login=$USERNAME -Dsonar.password=$PASSWORD"
+                }
+        }     
 	    }
 	}
 	stage('ICORP_Deployment') {
@@ -47,7 +49,7 @@ pipeline {
             environment name: 'ENV', value: 'ICORP'
         } 
 	    steps {
-	        echo '$ENV'
+	        build job: 'MDM_Deployer', parameters: [string(name: 'Env', value: 'icorp')]
 	    }
 	}
 	stage('ACORP_Deployment') {
@@ -55,7 +57,7 @@ pipeline {
             environment name: 'ENV', value: 'ACORP'
         } 
 	    steps {
-	        echo '$ENV'
+	        build job: 'MDM_Deployer', parameters: [string(name: 'Env', value: 'acorp')]
 	    }
 	}
 	stage('PCORP_Deployment') {
@@ -63,7 +65,7 @@ pipeline {
             environment name: 'ENV', value: 'PCORP'
         } 
 	    steps {
-	        echo '$ENV'
+	        build job: 'MDM_Deployer', parameters: [string(name: 'Env', value: 'pcorp')]
 	    }
 	}
      }
